reset ES version to 7.1.1 and allow downgarde

--- a/roles/elasticsearch/tasks/elasticsearch-Debian.yml
+++ b/roles/elasticsearch/tasks/elasticsearch-Debian.yml
@@ -67,6 +67,7 @@
     force: '{{ force_install }}'
     allow_unauthenticated: "{{ 'no' if es_apt_key else 'yes' }}"
     cache_valid_time: 86400
+    dpkg_options: "allow-downgrades"
   when: es_use_repository and not ansible_check_mode
   register: debian_elasticsearch_install_from_repo
   notify: restart elasticsearch
