--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -2,7 +2,7 @@
 # Variables shared among ALL HOSTS
 
 # Variable to force local installation
-force_local_installation: true
+force_local_installation: false
 # Root folder that will be used for sweagle, elasticsearch, jdk, mongo data and log, and vault installation
 root_installation_folder: "/opt"
 
