add jq on CentOs

--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -51,6 +51,7 @@
 
 - name: install jq on CentOs from repo
   become: true
+  when: ansible_distribution == "CentOS" and not force_local_installation
   tasks:
     - name: Add repository
       yum_repository:
@@ -63,7 +64,7 @@
         state: present
         key: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-7
 
-    - yum: name=jq  
+    - yum: name=jq
 ## Doesn't work for Debian on Ansible 2.5
 #- name: install screen, jq and telnet from local
 #  package:
