--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -51,7 +51,7 @@
     - ansible_distribution != "CentOS"
   tags: system
 
-# - name: install jq on CentOs from repo
+- name: install jq on CentOs from repo
 #   tasks:
 #     - name: Add repository
 #       yum_repository:
