--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -52,21 +52,21 @@
   tags: system
 
 - name: install jq on CentOs from repo
+  become: yes
   tasks:
     - name: Add repository
       yum_repository:
         name: epel
         description: EPEL YUM repo
-        baseurl: https://download.fedoraproject.org/pub/epel/$releasever/$basearch/
+        baseurl: https://download.fedoraproject.org/pub/epel/7/x86_64/
         gpgcheck: yes
-#     - rpm_key:
-#         state: present
-#         key: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-7
-#     - yum: name=jq
-#   become: true
-#   when:
-#     - ansible_distribution == "CentOS"
-#     - not force_local_installation
+    - rpm_key:
+        state: present
+        key: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-7
+    - yum: name=jq
+  when:
+    - ansible_distribution == "CentOS"
+    - not force_local_installation
 
 ## Doesn't work for Debian on Ansible 2.5
 #- name: install screen, jq and telnet from local
