force local installion for mysql on RH

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -8,6 +8,8 @@
     - "{{ ansible_os_family }}.yml"
   tags: [ mongodb, sweagle, sweagle-mongo ]
 
+-debug:
+    msg: "For insytall: {{ force_local_installation }}"
 - name: include installation tasks
   include_tasks: "{{ item }}"
   with_first_found:
