package needs simply to be present

--- a/roles/mongodb/tasks/install.redhat.yml
+++ b/roles/mongodb/tasks/install.redhat.yml
@@ -50,6 +50,7 @@
     name:
       - python-devel
       - python-pip
+    state: present
   become: true
   when: mongodb_pymongo_from_pip | bool
   tags: mongodb
