need to be root to creat /opt/jdk

--- a/roles/jdk/tasks/main.yml
+++ b/roles/jdk/tasks/main.yml
@@ -3,6 +3,7 @@
 - name: Install jdk 1.8 from local
   when: force_local_installation
   tags: jdk
+  become: yes
   block:
     - name: Create installation folder "{{ jdk_install_dir }}"
       file:
